for some reason, the gap is a bit too big. so lets see if this will fix it

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -404,7 +404,7 @@ footer {
     padding: 10px 0;
     overflow: hidden;
     display: flex;
-    gap: 5px; /* Remove gap between groups */
+    gap: 0px; /* Remove gap between groups */
 }
 
 .slideshow-group {
